3.10.5 - fix overlap

--- a/static/character.css
+++ b/static/character.css
@@ -379,6 +379,7 @@ main {
   box-shadow:
     inset 0 0 .25rem .1rem var(--primary-color),
           0 0  .5rem .1rem var(--primary-color);
+  z-index: 10;
 }
 #tooltip-stats span {
   display: inline-block;
